2003-07-10  Andrew Lunn  <andrew.lunn@ascom.ch>
        
	* support/mk_romfs.c: S_I[RWX]{USR|GRP|OTH} etc changed to match
	the changes in sys/stat.h

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/romfs.cdl: Fix doc link.

2003-01-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/romfs.cdl: Implements the CYGINT_IO_FILEIO_FS interface.

2003-01-29  John Dallaway  <jld@ecoscentric.com>

	* support/file2c.tcl: Accommodate latest Cygwin Tcl shell
	(tclsh83.exe)

2002-04-15  Bart Veer  <bartv@redhat.com>

	* support/file2c.tcl:
	Do not use an alignment attribute, since it is not honoured on
	all targets.
	
	* src/romfs.c:
	Remove alignment restrictions, since they are not actually needed
	yet and alignment is hard to guarantee on all targets.

2002-01-21  Jonathan Larmour  <jlarmour@redhat.com>

	* support/mk_romfs.c: Open image file in binary mode (for cygwin).
	Spotted by Warren Jasper.

2001-11-23  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/romfs.cdl (CYGTST_ROMFS_BUILD_TESTS): Try gcc and cc if $HOST_CC
	doesn't exist or has a problem.

2001-11-22  Jesper Skov  <jskov@redhat.com>

	* cdl/romfs.cdl: Use HOST_CC instead of 'cc'.

2001-10-17  Drew Moseley  <dmoseley@redhat.com>
2001-10-17  Jonathan Larmour  <jlarmour@redhat.com>

	* support/mk_romfs.c: Open input files in binary mode (for cygwin).
	* cdl/romfs.cdl: Work around cygwin path problems by copying files
	into build tree.

2001-07-20  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/fileio1.c (main): Get this to actually pass! Remove
	kernel dependency.
	* cdl/fileio.cdl: Get CDL dependencies better. Don't use
	fixed base address. Make test building an option. Build mk_romfs
	and use it to construct a test romfs.
	* support/mk_romfs.c: fix trivial typo
	* tests/testromfs: Directory hierarchy added for constructing test
	ROMFS.

2001-07-13  Richard Panton (richard.panton@3glab.com)

	* support/mk_romfs.c: Convert between host FS file modes and eCos
	ones.
